# gtpcnz

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .vale.ini  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.html  README.md  RELEASE-NOTES-v0.4.0.md  RELEASE-NOTES-v0.4.1.md  RELEASE-NOTES-v0.9.0.md  RELEASE-NOTES-v1.2.0.md  RELEASE-NOTES-v1.2.1.md  RELEASE-NOTES-v1.7.0.md  RELEASE-NOTES-v1.7.1.md  RELEASE-NOTES-v1.7.2.md  SECURITY.md  _quarto.yml  index.html  index.qmd  launch-schedule-v1.7.2.json  pyproject.toml  pyrightconfig.json  pytest_out.txt  pytest_out2.txt  renovate.json  repo_scorecards.py  requirements-dev.txt  requirements.txt  robots.txt  search.json  sitemap.xml  streamlit_app.py
.devcontainer/: devcontainer.json
.github/: release.yml
.github/workflows/: ci.yml  codeql.yml  dependency-canary.yml  dependency-edge.yml  huggingface-space.yml  mutation.yml  pages.yml  profiling.yml  quality.yml  remote-streamlit-smoke.yml  renovate.yml
.serena/: project.yml
.streamlit/: config.toml  secrets.toml.example
conductor/: README.md  cline-parallel-execution.md  index.md  parallel-execution-matrix.json  product-guidelines.md  product.md  state.md  tech-stack.md  tracks.md  workflow.md
conductor/agents/: cline-subagent-coordinator.md  dashboard-claims-agent.md  dependency-edge-agent.md  github-release-agent.md  public-calibration-agent.md  repo-hygiene-agent.md  voi-uncertainty-agent.md
conductor/prompts/: deepseek-v4-flash-subagent-template.md
conductor/skills/: dashboard-claims-skill.md  public-only-calibration-skill.md  repo-hygiene-skill.md
conductor/templates/: dependency-edge-track-template.md  release-publish-track-template.md  repo-hygiene-track-template.md  streamlit-dashboard-track-template.md
conductor/workflows/: branch-publish.md  cline-deepseek-parallel.md  dependency-edge-check.md  repo-hygiene.md  reproduce-public-release.md  streamlit-dashboard-check.md
dash_app/: Dockerfile  README.hf.md  __init__.py  app.py
dash_app/assets/: styles.css
data/: dataset-registry.json
data/evidence/: oia_request_tracker.csv
data/public_raw/: README.md
docs/: DASH-HUGGINGFACE-DEPLOYMENT.md  REPORTS-AND-DASHBOARD.html  REPORTS-AND-DASHBOARD.md  STREAMLIT-DEPLOYMENT.html  STREAMLIT-DEPLOYMENT.md  bleeding-edge-scorecard-v1.0.md  dependency-policy-v1.8.3.md  parameterised-model-run-report-v1.0.0.md  publication-pack-v1.8.1.md  repo-index-v0.3.0.md  repo-index-v0.4.0.md  repo-index-v0.4.1.md  repo-index-v0.5.0.md  repo-index-v0.7.0.md  repo-index-v0.8.0.md  repo-index-v0.9.0.md  repo-index-v1.0.0.md  repo-index-v1.1.0.md  repo-index-v1.2.0.md  repo-index-v1.7.0.md  repo-index-v1.7.1.md  repo-index-v1.7.2.md  requirements-moscow-v1.8.3.md  source-notes-v0.1.0.md  source-notes-v0.3.0.md  source-notes-v0.4.0.md  source-notes-v0.4.1.md  source-notes-v0.5.0.md  temp_find.py
gtpcnz/: __init__.py
models/: README.md  __init__.py
outputs/: additional-improvements-incorporated-v1.7.2.md  artefact-pack-index-v0.8.0.csv  artefact-pack-index-v0.9.0.csv  calibration-fitted-predicted-v1.5.0.csv  calibration-parameter-estimates-v1.5.0.csv  calibration-scenario-comparison-v1.5.0.csv  calibration-synthetic-observed-v1.5.0.csv  claim-boundaries-v1.7.2.md  complete-substack-series-v1.2.1.md  complete-substack-series-v1.6.0.md  devils-advocate-review-v1.7.2.md  equity-review-brief-v1.6.0.md  executive-brief-v0.8.0.docx  final-comprehensive-report-v0.8.0.docx  final-comprehensive-report-v0.8.0.md  first-six-posts-v1.7.1.md  first-six-posts-v1.7.2.md  full-parameterised-dashboard-table-v1.7.0.csv  full-parameterised-monthly-results-v1.7.0.csv  hybrid-uncertainty-summary-v0.8.0.csv  launch-front-door-v1.7.2.md  launch-post-red-team-controls-v1.7.2.md  launch-update-v1.7.2.md  local-link-audit-v1.6.0.csv  mcda-criteria-v0.9.0.csv  mcda-decision-support-report-v0.9.0.docx  mcda-decision-support-report-v0.9.0.md  mcda-example-results-v0.9.0.csv  mcda-game-position-example-v0.9.0.csv  mcda-policy-option-scorecard-v0.9.0.csv  mcda-policy-options-v0.9.0.csv  mcda-weight-sensitivity-v0.9.0.csv  mcda-weight-sets-v0.9.0.csv  mcda-workbook-v0.9.0.xlsx  model-logic-map-v1.7.0.csv  monte-carlo-scenario-summary-v0.7.0.csv  national-primary-care-benefits-schedule-v0.3.0.docx  nz-broader-policy-game-map-v0.4.0.docx  nz-policy-game-map-v0.4.0.docx  oia-data-request-tracker-v1.1.0.csv  (+33 more)
reports/: primary_care_architecture.html  primary_care_architecture.qmd  public_aggregate_model_report.qmd  substack-simulation-plot-polish-2026-06-16T12-27-29-241839+00-00.json  substack-simulation-plot-polish-2026-06-16T12-36-35-502275+00-00.json  substack-simulation-plot-readability-score-latest.json
scripts/: .enh.py  apply_substack_v181_updates.mjs  bayesian_opt.py  bootstrap_prefix_pixi.py  build_public_source_snapshot.py  build_v1_1_docs.py  build_v1_1_pack.py  check_calibration_target_readiness.py  check_calibration_validation_gates.py  check_concern_boundaries.py  check_conductor_parallel_tracks.py  check_dash_browser_smoke.py  check_data_freshness.py  check_dependency_lock.py  check_no_patient_data.py  check_parameter_traceability.py  check_pixi_package_manager.py  check_posterior_predictive_checks.py  check_public_holdout_validation.py  check_public_only_boundary.py  check_public_policy_shock_plausibility.py  check_public_source_fetch_scripts.py  check_public_source_readiness_matrix.py  check_public_source_retrieval_plan.py  check_public_source_snapshot.py  check_public_source_transform_scripts.py  check_public_temporal_holdout_validation.py  check_public_temporal_period_acquisition.py  check_public_validation_source_candidates.py  check_remote_streamlit_smoke.py  check_repo_health.py  check_substack_publication_readiness.py  check_substack_schedule_contract.py  check_transformed_schemas.py  check_version_consistency.py  create_v09_mcda.py  create_v09_workbook.py  create_v10_parameterised_run.py  create_v12_substack_pack.py  create_v151_short_substack_pack.py  (+37 more)
tests/: test_app.py  test_substack_publication_readiness.py
(+1295 files in other folders)
